--- a/filials.html
+++ b/filials.html
@@ -319,7 +319,7 @@
                                                                         class="form-control form-control--endTime"
                                                                         id="endTime" aria-describedby="endTime">
                                                                     <button type="button"
-                                                                        class="btn btn-primary  btn-addTimeTuesday">
+                                                                        class="btn btn-primary btn-addTime  btn-addTimeTuesday">
                                                                         <img src="./images/clock.svg" alt="clock">
                                                                     </button>
                                                                     <div class="addTime addTimeTuesday">
@@ -357,7 +357,7 @@
                                                                         class="form-control form-control--endTime"
                                                                         id="endTime" aria-describedby="endTime">
                                                                     <button type="button"
-                                                                        class="btn btn-primary  btn-addTimeWednesday">
+                                                                        class="btn btn-primary btn-addTime  btn-addTimeWednesday">
                                                                         <img src="./images/clock.svg" alt="clock">
                                                                     </button>
                                                                     <div class="addTime addTimeWednesday">
@@ -395,10 +395,10 @@
                                                                         class="form-control form-control--endTime"
                                                                         id="endTime" aria-describedby="endTime">
                                                                     <button type="button"
-                                                                        class="btn btn-primary  btn-addTimeThursday">
+                                                                        class="btn btn-primary btn-addTime btn-addTimeThursday">
                                                                         <img src="./images/clock.svg" alt="clock">
                                                                     </button>
-                                                                    <div class="addTime addTimeThursday">
+                                                                    <div class="addTime btn-addTime addTimeThursday">
                                                                         <div class="input-group input-group-extraday">
                                                                             <label for="startTime">с</label>
                                                                             <input type="time"
@@ -433,7 +433,7 @@
                                                                         class="form-control form-control--endTime"
                                                                         id="endTime" aria-describedby="endTime">
                                                                     <button type="button"
-                                                                        class="btn btn-primary  btn-addTimeFriday">
+                                                                        class="btn btn-primary btn-addTime btn-addTimeFriday">
                                                                         <img src="./images/clock.svg" alt="clock">
                                                                     </button>
                                                                     <div class="addTime addTimeFriday">
@@ -471,7 +471,7 @@
                                                                         class="form-control form-control--endTime"
                                                                         id="endTime" aria-describedby="endTime">
                                                                     <button type="button"
-                                                                        class="btn btn-primary  btn-addTimeSaturday">
+                                                                        class="btn btn-primary btn-addTime btn-addTimeSaturday">
                                                                         <img src="./images/clock.svg" alt="clock">
                                                                     </button>
                                                                     <div class="addTime addTimeSaturday">
@@ -509,7 +509,7 @@
                                                                         class="form-control form-control--endTime"
                                                                         id="endTime" aria-describedby="endTime">
                                                                     <button type="button"
-                                                                        class="btn btn-primary  btn-addTimeSunday">
+                                                                        class="btn btn-primary btn-addTime btn-addTimeSunday">
                                                                         <img src="./images/clock.svg" alt="clock">
                                                                     </button>
                                                                     <div class="addTime addTimeSunday">
