--- a/filials.html
+++ b/filials.html
@@ -262,7 +262,7 @@
                                                                     class="input-group input-group-day input-group--monday">
                                                                     <div class="checkbox-wrap">
                                                                         <input name="checkboxMonday"
-                                                                            class="form-check-input form-check-input--monday"
+                                                                            class="form-check-input checkbox-time form-check-input--monday"
                                                                             type="checkbox" value="" id="checkboxMonday"
                                                                             checked>
                                                                     </div>
@@ -303,7 +303,7 @@
                                                                     class="input-group input-group-day input-group--tuesday">
                                                                     <div class="checkbox-wrap">
                                                                         <input
-                                                                            class="form-check-input form-check-input--tuesday"
+                                                                            class="form-check-input checkbox-time form-check-input--tuesday"
                                                                             type="checkbox" value=""
                                                                             id="checkboxTuesday" checked>
                                                                     </div>
@@ -341,7 +341,7 @@
                                                                     class="input-group input-group-day input-group--wednesday">
                                                                     <div class="checkbox-wrap">
                                                                         <input
-                                                                            class="form-check-input form-check-input--wednesday"
+                                                                            class="form-check-input checkbox-time form-check-input--wednesday"
                                                                             type="checkbox" value=""
                                                                             id="checkboxWednesday" checked>
                                                                     </div>
@@ -379,7 +379,7 @@
                                                                     class="input-group input-group-day input-group--thursday">
                                                                     <div class="checkbox-wrap">
                                                                         <input
-                                                                            class="form-check-input form-check-input--thursday"
+                                                                            class="form-check-input checkbox-time form-check-input--thursday"
                                                                             type="checkbox" value=""
                                                                             id="checkboxThursday" checked>
                                                                     </div>
@@ -414,7 +414,7 @@
                                                                 </div>
                                                                 <!-- Пятница -->
                                                                 <div
-                                                                    class="input-group input-group-day input-group--friday">
+                                                                    class="input-group input-group-day checkbox-time input-group--friday">
                                                                     <div class="checkbox-wrap">
                                                                         <input
                                                                             class="form-check-input form-check-input--friday"
@@ -455,7 +455,7 @@
                                                                     class="input-group input-group-day input-group--saturday">
                                                                     <div class="checkbox-wrap">
                                                                         <input
-                                                                            class="form-check-input form-check-input--saturday"
+                                                                            class="form-check-input checkbox-time form-check-input--saturday"
                                                                             type="checkbox" value=""
                                                                             id="checkboxSaturday" checked>
                                                                     </div>
@@ -493,7 +493,7 @@
                                                                     class="input-group input-group-day input-group--sunday">
                                                                     <div class="checkbox-wrap">
                                                                         <input
-                                                                            class="form-check-input form-check-input--sunday"
+                                                                            class="form-check-input checkbox-time form-check-input--sunday"
                                                                             type="checkbox" value="" id="checkboxSunday"
                                                                             checked>
                                                                     </div>
