--- a/filials.html
+++ b/filials.html
@@ -558,8 +558,9 @@
                                             <!-- Button trigger modal -->
 
                                             <div class="btn-addSite__container mb-3">
-                                                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                                    data-bs-target="#addSite">
+                                                <button type="button" class="btn btn-addSite-modal btn-primary" >
+                                                    <!-- data-bs-toggle="modal"
+                                                    data-bs-target="#addSite" -->
                                                     Добавить сайт
                                                 </button>
                                             </div>
@@ -571,7 +572,7 @@
 
                                         <!-- Modal -->
                                         <form action="#" id="form-addSite" method="POST">
-                                            <div class="modal fade" id="addSite" tabindex="-1"
+                                            <div class="modal modalAddSite fade" id="addSite" tabindex="-1"
                                                 aria-labelledby="addSiteLabel" aria-hidden="true">
                                                 <div class="modal-dialog">
                                                     <div class="modal-content">
@@ -584,9 +585,9 @@
                                                         </div>
                                                         <div class="modal-body">
                                                             <div class="mb-3">
-                                                                <label for="platform" class="form-label">Выберите
+                                                                <label for="id" class="form-label">Выберите
                                                                     платформу</label>
-                                                                <select name="platform" class="form-select"
+                                                                <select name="id" class="form-select"
                                                                     aria-label="selectPlatform">
                                                                     <option selected></option>
                                                                     <option value="1">One</option>
@@ -695,13 +696,13 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs5/dt-1.11.2/b-2.0.0/datatables.min.js"></script>
     <script src="./js/plugins/bootstrap-tagsinput-latest/dist/bootstrap-tagsinput.min.js"></script>
-    <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
         integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
         integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
         crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
