--- a/filials.html
+++ b/filials.html
@@ -311,11 +311,11 @@
                                                                         Вторник
                                                                     </span>
                                                                     <label for="startTime">с</label>
-                                                                    <input type="time"
+                                                                    <input type="time"  name="startTimeTuesday"
                                                                         class="form-control form-control--startTime"
                                                                         id="startTime" aria-describedby="startTime">
                                                                     <label for="endTime">по</label>
-                                                                    <input type="time"
+                                                                    <input type="time" name="endTimeTuesday"
                                                                         class="form-control form-control--endTime"
                                                                         id="endTime" aria-describedby="endTime">
                                                                     <button type="button"
@@ -325,12 +325,12 @@
                                                                     <div class="addTime addTimeTuesday">
                                                                         <div class="input-group input-group-extraday">
                                                                             <label for="startTime">с</label>
-                                                                            <input type="time"
+                                                                            <input type="time" name="startTimeTuesdayExtra"
                                                                                 class="form-control form-control--startTime"
                                                                                 id="startTime"
                                                                                 aria-describedby="startTime">
                                                                             <label for="endTime">по</label>
-                                                                            <input type="time"
+                                                                            <input type="time" name="startTimeTuesdayExtra"
                                                                                 class="form-control form-control--endTime"
                                                                                 id="endTime" aria-describedby="endTime">
                                                                         </div>
@@ -558,7 +558,7 @@
                                             <!-- Button trigger modal -->
 
                                             <div class="btn-addSite__container mb-3">
-                                                <button type="button" class="btn btn-addSite-modal btn-primary" >
+                                                <button type="button" class="btn btn-addSite-modal btn-primary">
                                                     <!-- data-bs-toggle="modal"
                                                     data-bs-target="#addSite" -->
                                                     Добавить сайт
@@ -572,7 +572,7 @@
 
                                         <!-- Modal -->
                                         <form action="#" id="form-addSite" method="POST">
-                                            <div class="modal modalAddSite fade" id="addSite" tabindex="-1"
+                                            <div class="modal modalAddSite fade" id="addSite"
                                                 aria-labelledby="addSiteLabel" aria-hidden="true">
                                                 <div class="modal-dialog">
                                                     <div class="modal-content">
@@ -585,14 +585,14 @@
                                                         </div>
                                                         <div class="modal-body">
                                                             <div class="mb-3">
-                                                                <label for="id" class="form-label">Выберите
+                                                                <label for="platform" class="form-label">Выберите
                                                                     платформу</label>
-                                                                <select name="id" class="form-select"
-                                                                    aria-label="selectPlatform">
-                                                                    <option selected></option>
-                                                                    <option value="1">One</option>
-                                                                    <option value="2">Two</option>
-                                                                    <option value="3">Three</option>
+                                                                <select name="platform" id="select2Platform"
+                                                                    class="form-select select2Platform form-select-lg mb-3"
+                                                                    aria-label="select">
+                                                                    <option id="1" value="google">Google</option>
+                                                                    <option id="2" value="yandex">Yandex</option>
+                                                                    <option id="3" value="flamp">Flamp</option>
                                                                 </select>
                                                             </div>
                                                             <div class="mb-3">
@@ -693,7 +693,6 @@
     </main>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs5/dt-1.11.2/b-2.0.0/datatables.min.js"></script>
     <script src="./js/plugins/bootstrap-tagsinput-latest/dist/bootstrap-tagsinput.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
@@ -702,6 +701,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
         integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
         crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
