--- a/filials.html
+++ b/filials.html
@@ -48,7 +48,7 @@
         <div class="accordion accordion-leftMenu accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed button-playgrounds" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                         Площадки
                     </button>
@@ -61,7 +61,7 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed button-polls" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                         Опросы
                     </button>
@@ -74,7 +74,7 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed button-members" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                         Участники
                     </button>
@@ -87,7 +87,7 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingFour">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed button-settings" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
                         Настройки
                     </button>
@@ -320,8 +320,8 @@
                                                                     <input type="time" name="from"
                                                                         class="form-control form-control--startTime"
                                                                         id="startTime" aria-describedby="startTime">
-                                                                    <label for="for">по</label>
-                                                                    <input type="time" name="from"
+                                                                    <label for="to">по</label>
+                                                                    <input type="time" name="to"
                                                                         class="form-control form-control--endTime"
                                                                         id="endTime" aria-describedby="endTime">
                                                                     <button type="button"
@@ -699,8 +699,8 @@
                                 </div>
                                     
                                 <div class="modal-footer">
-                                    <button type="submit" class="btn-addSite btn-primary">Принять</button>
-                                    <button type="submit" class="btn btn-secondary"
+                                    <button type="submit" class="btn-addDataTable btn-primary">Принять</button>
+                                    <button type="submit" class="btn btn-cancelDataTable btn-secondary"
                                         data-bs-dismiss="modal">Отмена</button>
                                 </div>
                             </div>
