--- a/filials.html
+++ b/filials.html
@@ -684,7 +684,7 @@
 
                     </div>
 
-                    <div class="modal modalDataTable fade" id="modalDataTable" aria-labelledby="dataTableTitle"
+                    <div class="modal modalDataTable fade" id="modalDataTable" aria-labelledby="modalDataTable"
                         aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
